constraints/pod-security-policy-host-network-ports-samples-psp-host-network-ports-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata: # kpt-merge: /psp-host-network-ports
  name: psp-host-network-ports-sample
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    hostNetwork: true
    min: 80
    max: 9000
